@@ -344,6 +344,7 @@
 		<TD style="width: 99%;">
 			<SELECT SIZE="1" name="g">
 				<OPTION value="" {if !$listdata.customergroup} SELECTED {/if}>{trans("- all groups -")}</OPTION>
+				<OPTION value="-1"{if $listdata.customergroup == -1} selected{/if}>{trans("- without assigned groups -")}</OPTION>
 				{section name=customergroups loop=$customergroups}
 				<OPTION value="{$customergroups[customergroups].id}" {if $listdata.customergroup == $customergroups[customergroups].id} SELECTED {/if}>{$customergroups[customergroups].name|truncate:50:"...":true}</OPTION>
 				{/section}
